--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -356,5 +356,7 @@
     <string name="allow_lock_screen">Lassen Sie die App über dem Sperrbildschirm stehen</string>
     <string name="share">Aktie</string>
     <string name="file_prefetch_size">Bytes zum Speichern in Speicher bei der Wiedergabe von lokalen Dateien:</string>
+    <string name="download">Download</string>
+    <string name="download_confimation">Diese Funktion erfordert die externe Erweiterung \"%s\". Möchten Sie es jetzt herunterladen?</string>
 
 </resources>
