--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -356,5 +356,7 @@
     <string name="allow_lock_screen">Autoriser l\'application à rester au-dessus de l\'écran de verrouillage</string>
     <string name="share">Partager</string>
     <string name="file_prefetch_size">Octets à mémoriser lors de la lecture de fichiers locaux :</string>
+    <string name="download">Télécharger</string>
+    <string name="download_confimation">Cette fonctionnalité nécessite l\'extension externe \"%s\". Voulez-vous le télécharger maintenant?</string>
 
 </resources>
